<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_import">Import Data</string>
    <string name="new_item">Add New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="product_name_label">Product Name:</string>
    <string name="price_label">Price: $ </string>
    <string name="quantity_label">Quantity:</string>
    <string name="supplier_name_label">Supplier Name:</string>
    <string name="supplier_phone_number_label">Supplier Phone Number:</string>
    <string name="supplier_email_label">Supplier Email Address:</string>
    <string name="image_label">Image:</string>
    <string name="select_image_btn_label">Select Image</string>
    <string name="phone_confirm">Phone</string>
    <string name="tel_confirm">tel:</string>
    <string name="email_confirm">E-mail</string>
    <string name="mailto_confim">mailto:</string>
    <string name="order_confirm_msg">Would you like to order more?</string>
    <string name="email_subject">Recurrent new order</string>
    <string name="email_body_text">"Please send us as soon as possible more "</string>
    <string name="item_deleted">Item Deleted Successfully</string>
    <string name="confirm_delete_msg">Are you sure you want to permanently delete this item?</string>
    <string name="quantity_updated_msg">Quantity Updated Successfully</string>
    <string name="warning_dialog_msg">Warning</string>
    <string name="exclamation">!!!</string>
    <string name="email_type">text/plain</string>
    <string name="positive_dialog">Yes</string>
    <string name="negative_dialog">No</string>
    <string name="qty_label">QTY</string>
    <string name="dollar_sign">$</string>
    <string name="buy_now_btn">BUY NOW</string>
    <string name="error_saving_item">Error with saving item</string>
    <string name="item_saved">Item saved successfully</string>
    <string name="select_picture">Select Picture</string>
    <string name="uri_parse">android.resource://com.example.android.inventoryapp/drawable/placeholder</string>
    <string name="product_name_error_msg">You must enter a product name.</string>
    <string name="price_error_msg">You must enter a price.</string>
    <string name="quantity_error_msg">You must enter a quantity.</string>
    <string name="supplier_name_error_msg">You must enter a supplier name.</string>
    <string name="supplier_phone_error_msg">You must enter a supplier phone number.</string>
    <string name="supplier_email_error_msg">You must enter a supplier email address.</string>
</resources>
