<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_name"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_label" />

            <EditText
                android:id="@+id/product_name_edit"
                style="@style/header_hint_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="e.g. Apples"
                android:nextFocusDown="@+id/price_edit"
                android:paddingLeft="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label" />

            <EditText
                android:id="@+id/price_edit"
                style="@style/header_hint_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="e.g. CAD Currency"
                android:inputType="number"
                android:maxLength="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/quantity_title"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label" />


            <EditText
                android:id="@+id/quantity_edit"
                style="@style/header_hint_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Max 999"
                android:inputType="number"
                android:maxLength="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/supplier_name"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name_label" />

            <EditText
                android:id="@+id/supplier_name_edit"
                style="@style/header_hint_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="e.g. Toronto Wholesale Inc"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:id="@+id/supplier_phone_number"
            style="@style/header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_number_label" />

        <EditText
            android:id="@+id/supplier_phone_edit"
            style="@style/header_hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="e.g. 1-800-123-4567"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email"
            style="@style/header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email_label" />

        <EditText
            android:id="@+id/supplier_email_edit"
            style="@style/header_hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="supplier@supplier.com"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/image_title"
            style="@style/header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_label" />

        <Button
            android:id="@+id/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image_btn_label"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp" />

        <ImageButton
            android:id="@+id/save_item"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#0000"
            android:scaleType="fitXY"
            android:src="@drawable/save_btn" />

    </LinearLayout>

</ScrollView>