<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_name"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_label" />

            <TextView
                android:id="@+id/product_name_stored"
                style="@style/header_hint_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label" />

            <TextView
                android:id="@+id/price_stored"
                style="@style/header_hint_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/quantity_title"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_label" />

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="5dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#0000"
                android:scaleType="fitXY"
                android:src="@drawable/minus" />

            <EditText
                android:id="@+id/quantity_stored"
                style="@style/header_hint_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="Max 999"
                android:inputType="number"
                android:maxLength="3" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="5dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#0000"
                android:scaleType="fitXY"
                android:src="@drawable/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/supplier_name"
                style="@style/header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name_label" />

            <TextView
                android:id="@+id/supplier_name_stored"
                style="@style/header_hint_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:id="@+id/supplier_phone_number"
            style="@style/header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_number_label" />

        <TextView
            android:id="@+id/supplier_phone_stored"
            style="@style/header_hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email"
            style="@style/header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email_label" />

        <TextView
            android:id="@+id/supplier_email_stored"
            style="@style/header_hint_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/image_title"
            style="@style/header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_label" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/delete_item"
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#0000"
                android:scaleType="fitXY"
                android:src="@drawable/delete_btn" />

            <ImageButton
                android:id="@+id/save_item"
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#0000"
                android:scaleType="fitXY"
                android:src="@drawable/save_btn" />

            <ImageButton
                android:id="@+id/order_item"
                android:layout_width="55dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#0000"
                android:scaleType="fitXY"
                android:src="@drawable/order_btn" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>